--- a/templates/ms-base/build.gradle
+++ b/templates/ms-base/build.gradle
@@ -1,2 +1,119 @@
+buildscript {
+    ext {
+        springBootVersion = '1.3.0.M5'
+        dockerPluginVersion = '0.8.2'
+    }
+    repositories {
+        jcenter()
+        mavenCentral()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
+        ivy {
+            artifactPattern "http://dl.bintray.com/bsideup/thirdparty/[artifact]-[revision](-[classifier]).[ext]"
+        }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:\${springBootVersion}")
+        classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:2.2.+'
+        classpath "com.bmuschko:gradle-docker-plugin:\${dockerPluginVersion}"
+        classpath "ru.trylogic.gradle.plugins:gradle-thrift-plugin:0.1.1"
+    }
+}
+
 group = "${group}"
 version = "${version}"
+
+allprojects {
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'provided-base'
+
+    repositories {
+        mavenCentral()
+        jcenter()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
+        maven { url "http://dl.bintray.com/aatarasoff/maven" }
+    }
+
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Brixton.M1"
+        }
+
+        dependencies {
+            def thriftVersion = '0.9.2';
+            Map platformMapping = [
+                    (org.gradle.internal.os.OperatingSystem.WINDOWS): 'win',
+                    (org.gradle.internal.os.OperatingSystem.MAC_OS) : 'osx'
+            ].withDefault { 'nix' }
+
+            dependency 'org.codehaus.groovy:groovy-all:2.4.5'
+            dependency "org.apache.thrift:thrift:\$thriftVersion:\${platformMapping.get(org.gradle.internal.os.OperatingSystem.current())}@bin"
+            dependency "org.apache.thrift:libthrift:\${thriftVersion}"
+            dependency 'info.developerblog.spring.thrift:spring-thrift-starter:0.0.2'
+        }
+    }
+}
+
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'groovy'
+    apply plugin: 'idea'
+    apply plugin: 'spring-boot'
+    apply plugin: 'thrift'
+
+    task generateThriftJava(type: ru.trylogic.gradle.thrift.tasks.ThriftCompileTask) {
+        generator = 'java:private-members'
+        destinationDir = file("generated-src/generated/java")
+    }
+
+
+    sourceSets {
+        main {
+            java {
+                srcDir generateThriftJava.destinationDir
+            }
+        }
+    }
+
+    clean {
+        delete generateThriftJava.destinationDir
+    }
+
+    idea {
+        module {
+            sourceDirs += file('src/main/thrift')
+            sourceDirs += generateThriftJava.destinationDir
+        }
+    }
+
+    compileJava.dependsOn generateThriftJava
+
+
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+
+    jar {
+        archiveName = project.name + ".jar"
+    }
+
+    dependencies {
+        thrift "org.apache.thrift:thrift"
+        compile "org.apache.thrift:libthrift"
+        compile 'org.codehaus.groovy:groovy-all'
+
+        provided("org.projectlombok:lombok")
+
+        testCompile("org.springframework.boot:spring-boot-starter-test")
+    }
+
+    task dockerBuild << {
+        exec {
+            commandLine 'docker', 'build', '--force-rm=true', "--tag='\${project.name}'", '.'
+        }
+    }
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.7'
+}
