Set executable flag in springBoot plugin. Fix autoformat bug in Application class

--- a/templates/ms-base/build.gradle
+++ b/templates/ms-base/build.gradle
@@ -112,6 +112,10 @@ subprojects {
             commandLine 'docker', 'build', '--force-rm=true', "--tag='\${project.name}'", '.'
         }
     }
+
+    springBoot {
+        executable = true
+    }
 }
 
 task wrapper(type: Wrapper) {
