Add Docker support in subprojects and version property

--- a/templates/ms-sub/build.gradle
+++ b/templates/ms-sub/build.gradle
@@ -1,3 +1,5 @@
+version = "${version}"
+
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-actuator")
