--- a/templates/ms-sub/build.gradle
+++ b/templates/ms-sub/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-actuator")
 //    compile("org.springframework.cloud:spring-cloud-starter-feign")
+//    compile("org.springframework.cloud:spring-cloud-starter-ribbon")
 //    compile("org.springframework.cloud:spring-cloud-starter-eureka")
 //    compile("org.springframework.cloud:spring-cloud-starter-hystrix")
 //    compile("org.springframework.cloud:spring-cloud-starter-eureka-server")
