--- a/templates/ms-base/build.gradle
+++ b/templates/ms-base/build.gradle
@@ -51,6 +51,10 @@ allprojects {
             dependency "org.apache.thrift:thrift:\$thriftVersion:\${platformMapping.get(org.gradle.internal.os.OperatingSystem.current())}@bin"
             dependency "org.apache.thrift:libthrift:\${thriftVersion}"
             dependency 'info.developerblog.spring.thrift:spring-thrift-starter:0.0.2'
+
+            dependency "org.springframework.cloud:spring-cloud-consul-core:1.0.0.M1"
+            dependency "org.springframework.cloud:spring-cloud-consul-discovery:1.0.0.M1"
+            dependency "org.springframework.cloud:spring-cloud-consul-config:1.0.0.M1"
         }
     }
 }
