--- a/templates/ms-sub/build.gradle
+++ b/templates/ms-sub/build.gradle
@@ -11,5 +11,9 @@ dependencies {
 //    compile("org.springframework.cloud:spring-cloud-config-server")
 //    compile("org.springframework.cloud:spring-cloud-starter-zuul")
 
+//    compile "org.springframework.cloud:spring-cloud-consul-core"
+//    compile "org.springframework.cloud:spring-cloud-consul-discovery"
+//    compile "org.springframework.cloud:spring-cloud-consul-config"
+
 //    compile 'info.developerblog.spring.thrift:spring-thrift-starter'
 }
