--- a/cool-project/docker-compose.yml
+++ b/cool-project/docker-compose.yml
@@ -12,7 +12,7 @@ consul:
     - "8400:8400"
     - "8500:8500"
     - "53:8600/udp"
-  command: "-bootstrap -advertise ${dockerHost} -ui-dir /ui"
+  command: "-bootstrap -advertise 192.168.99.100 -ui-dir /ui"
   restart: always
 
 registrator:
@@ -21,12 +21,12 @@ registrator:
   net: "host"
   volumes:
     - "/var/run/docker.sock:/tmp/docker.sock"
-  command: "-ip ${dockerHost} consul://${dockerHost}:8500"
+  command: "-ip 192.168.99.100 consul://192.168.99.100:8500"
   restart: always
 
 sample-service:
   image: sample-service
-  dns: ${dns}
+  dns: 172.17.42.1
   ports:
     - "8080"
   environment:
