--- a/templates/ms-base/build.gradle
+++ b/templates/ms-base/build.gradle
@@ -49,8 +49,8 @@ allprojects {
         dependencies {
             dependency 'org.codehaus.groovy:groovy-all:2.4.5'
             dependency "org.apache.thrift:libthrift:\${thriftVersion}"
-            dependency 'info.developerblog.spring.thrift:spring-thrift-starter:0.0.2'
-            dependency 'info.developerblog.spring.thrift:spring-thrift-api-gateway:0.0.1'
+            dependency 'info.developerblog.spring.thrift:spring-thrift-starter:0.1.2'
+            dependency 'info.developerblog.spring.thrift:spring-thrift-api-gateway:0.0.2'
 
             dependency "org.springframework.cloud:spring-cloud-consul-core:1.0.0.M1"
             dependency "org.springframework.cloud:spring-cloud-consul-discovery:1.0.0.M1"
@@ -115,6 +115,7 @@ subprojects {
 
         thrift "org.apache.thrift:thrift:\$thriftVersion:\${platformMapping.get(OperatingSystem.current())}@bin"
 
+        compile "org.apache.thrift:libthrift"
         compile 'org.codehaus.groovy:groovy-all'
 
         provided("org.projectlombok:lombok")
