--- a/templates/ms-sub/build.gradle
+++ b/templates/ms-sub/build.gradle
@@ -3,8 +3,8 @@ version = "${version}"
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-actuator")
-//    compile("org.springframework.cloud:spring-cloud-starter-feign")
-//    compile("org.springframework.cloud:spring-cloud-starter-ribbon")
+   compile("org.springframework.cloud:spring-cloud-starter-feign")
+   compile("org.springframework.cloud:spring-cloud-starter-ribbon")
 //    compile("org.springframework.cloud:spring-cloud-starter-eureka")
 //    compile("org.springframework.cloud:spring-cloud-starter-hystrix")
 //    compile("org.springframework.cloud:spring-cloud-starter-eureka-server")
@@ -15,6 +15,6 @@ dependencies {
 //    compile "org.springframework.cloud:spring-cloud-consul-discovery"
 //    compile "org.springframework.cloud:spring-cloud-consul-config"
 
-//    compile 'info.developerblog.spring.thrift:spring-thrift-starter'
+    compile 'info.developerblog.spring.thrift:spring-thrift-starter'
 //    compile 'info.developerblog.spring.thrift:spring-thrift-api-gateway'
 }
