Fix task name in dependency declaration

--- a/templates/ms-base/build.gradle
+++ b/templates/ms-base/build.gradle
@@ -129,7 +129,7 @@ subprojects {
         }
     }
 
-    dockerBUild.dependsOn build
+    dockerBuild.dependsOn build
 
     springBoot {
         executable = true
