--- a/templates/ms-base/build.gradle
+++ b/templates/ms-base/build.gradle
@@ -1,141 +1,77 @@
-import org.gradle.internal.os.OperatingSystem
-
 buildscript {
-    ext {
-        springBootVersion = '1.3.0.M5'
-        dockerPluginVersion = '0.8.2'
-    }
-    repositories {
-        jcenter()
-        mavenCentral()
-        maven { url "https://repo.spring.io/snapshot" }
-        maven { url "https://repo.spring.io/milestone" }
-        ivy {
-            artifactPattern "http://dl.bintray.com/bsideup/thirdparty/[artifact]-[revision](-[classifier]).[ext]"
-        }
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:\${springBootVersion}")
-        classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:2.2.+'
-        classpath "com.bmuschko:gradle-docker-plugin:\${dockerPluginVersion}"
-        classpath "ru.trylogic.gradle.plugins:gradle-thrift-plugin:0.1.1"
-    }
+  repositories {
+    jcenter()
+  }
+  dependencies {
+    classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.5.RELEASE")
+    classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:2.2.+'
+  }
 }
 
-group = "${group}"
-version = "${version}"
+group = "ru.jeeconf"
+version = "0.0.1"
 
-ext {
-    thriftVersion = '0.9.2'
-}
 
 allprojects {
-    apply plugin: 'io.spring.dependency-management'
-    apply plugin: 'provided-base'
+  apply plugin: 'io.spring.dependency-management'
+  apply plugin: 'provided-base'
 
-    repositories {
-        mavenCentral()
-        jcenter()
-        maven { url "https://repo.spring.io/snapshot" }
-        maven { url "https://repo.spring.io/milestone" }
-        maven { url "http://dl.bintray.com/aatarasoff/maven" }
+  repositories {
+    jcenter()
+  }
+
+  dependencyManagement {
+    imports {
+      mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Brixton.RELEASE"
     }
 
-    dependencyManagement {
-        imports {
-            mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Brixton.M1"
-        }
-
-        dependencies {
-            dependency 'org.codehaus.groovy:groovy-all:2.4.5'
-            dependency "org.apache.thrift:libthrift:\${thriftVersion}"
-            dependency 'info.developerblog.spring.thrift:spring-thrift-starter:0.1.3'
-            dependency 'info.developerblog.spring.thrift:spring-thrift-api-gateway:0.0.3'
-
-            dependency "org.springframework.cloud:spring-cloud-consul-core:1.0.0.M1"
-            dependency "org.springframework.cloud:spring-cloud-consul-discovery:1.0.0.M1"
-            dependency "org.springframework.cloud:spring-cloud-consul-config:1.0.0.M1"
-        }
+    dependencies {
+      dependency 'org.projectlombok:lombok:1.16.8'
+      dependency 'org.codehaus.groovy:groovy-all:2.4.5'
     }
+  }
 }
 
 subprojects {
-    apply plugin: 'java'
-    apply plugin: 'groovy'
-    apply plugin: 'idea'
-    apply plugin: 'spring-boot'
-    apply plugin: 'thrift'
+  apply plugin: 'java'
+  apply plugin: 'groovy'
+  apply plugin: 'idea'
+  apply plugin: 'spring-boot'
 
-    task generateThriftJava(type: ru.trylogic.gradle.thrift.tasks.ThriftCompileTask) {
-        generator = 'java:private-members'
-        destinationDir = file("generated-src/generated/java")
+  sourceCompatibility = 1.8
+  targetCompatibility = 1.8
+
+  jar {
+    archiveName = project.name + ".jar"
+  }
+
+  dependencies {
+    compile 'org.codehaus.groovy:groovy-all'
+
+    compile 'org.springframework.cloud:spring-cloud-starter-zipkin'
+    compile 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
+
+    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+//    compile 'org.springframework.cloud:spring-cloud-starter-consul-all'
+
+    provided 'org.projectlombok:lombok'
+
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+  }
+
+  task dockerBuild << {
+    exec {
+      commandLine 'docker', 'build', '--force-rm=true', "--tag='${project.name}'", '.'
     }
+  }
 
+  dockerBuild.dependsOn build
 
-    sourceSets {
-        main {
-            java {
-                srcDir generateThriftJava.destinationDir
-            }
-        }
-    }
-
-    clean {
-        delete generateThriftJava.destinationDir
-    }
-
-    idea {
-        module {
-            sourceDirs += file('src/main/thrift')
-            sourceDirs += generateThriftJava.destinationDir
-        }
-    }
-
-    compileJava.dependsOn generateThriftJava
-
-
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-
-    jar {
-        archiveName = project.name + ".jar"
-    }
-
-    repositories {
-        ivy {
-            artifactPattern "http://dl.bintray.com/bsideup/thirdparty/[artifact]-[revision](-[classifier]).[ext]"
-        }
-    }
-
-    dependencies {
-        Map platformMapping = [
-                (OperatingSystem.WINDOWS) : 'win',
-                (OperatingSystem.MAC_OS) : 'osx'
-        ].withDefault { 'nix' }
-
-        thrift "org.apache.thrift:thrift:\$thriftVersion:\${platformMapping.get(OperatingSystem.current())}@bin"
-
-        compile "org.apache.thrift:libthrift"
-        compile 'org.codehaus.groovy:groovy-all'
-
-        provided("org.projectlombok:lombok")
-
-        testCompile("org.springframework.boot:spring-boot-starter-test")
-    }
-
-    task dockerBuild << {
-        exec {
-            commandLine 'docker', 'build', '--force-rm=true', "--tag='\${project.name}'", '.'
-        }
-    }
-
-    dockerBuild.dependsOn build
-
-    springBoot {
-        executable = true
-    }
+  springBoot {
+    executable = true
+  }
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.8'
+  gradleVersion = '2.13'
 }
