--- a/templates/ms-gateway/build.gradle
+++ b/templates/ms-gateway/build.gradle
@@ -1,13 +1,12 @@
-version = "${version}"
+version = '0.0.1'
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile("org.springframework.cloud:spring-cloud-starter-zuul")
+  compile 'org.springframework.boot:spring-boot-starter-web'
+  compile 'org.springframework.boot:spring-boot-starter-actuator'
+  compile 'org.springframework.cloud:spring-cloud-starter-zuul'
 
-    compile "org.springframework.cloud:spring-cloud-consul-core"
-    compile "org.springframework.cloud:spring-cloud-consul-discovery"
-    compile "org.springframework.cloud:spring-cloud-consul-config"
-
-    compile 'info.developerblog.spring.thrift:spring-thrift-api-gateway'
+  compile 'org.springframework.cloud:spring-cloud-starter-hystrix'
+  compile 'org.springframework.cloud:spring-cloud-starter-hystrix-dashboard'
+  compile 'org.springframework.cloud:spring-cloud-netflix-hystrix-stream'
+  compile 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
 }
