--- a/templates/ms-sub/src/main/resources/application.yml
+++ b/templates/ms-sub/src/main/resources/application.yml
@@ -1,3 +1,29 @@
-fbi-service:
-  ribbon:
-    listOfServers: localhost:8082
+spring:
+  application:
+    name: ${SERVICE_NAME:default}
+  zipkin:
+    base-url: http://192.168.99.100:9411
+  cloud:
+    inetutils:
+      ignored-interfaces:
+        - vbox*
+        - bridge*
+        - awd*
+        - lo*
+        - gif*
+        - stf*
+        - en1
+        - en2
+    consul:
+      discovery:
+        instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+  rabbitmq:
+    host: ${rabbitmq.host}
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
+ribbon:
+  ConnectTimeout: 3000
+  ReadTimeout: 60000
+
+logging:
+  level.org.springframework.cloud: ERROR
